fix logo and css

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,14 +5,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title> Free Single page Hospital Website Template | Smarteyeapps.com</title>
+    <title>Speech Care</title>
 
-    <link rel="shortcut icon" href="{% static 'assets/images/fav.jpg' %}">
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/fontawsom-all.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/plugins/slider/css/owl.carousel.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/plugins/slider/css/owl.theme.default.css'%}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/custom.css' %}" />
+
 </head>
 
 <body>
@@ -24,17 +26,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-2 col-md-3 no-padding col-sm-12 nav-img">
-                        <img src="{% static 'assets/images/logo.jpg' %}" alt="">
+                        <img class="logo" src="{% static 'assets/images/logo.png' %}" alt="">
                         <a data-toggle="collapse" data-target="#menu" href="#menu"><i
                                 class="fas d-block d-md-none small-menu fa-bars"></i></a>
                     </div>
                     <div id="menu" class="col-lg-8 col-md-9 d-none d-md-block nav-item">
                         <ul>
-                            <li><a href="#">Home</a></li>
+                            <li><a href="/">Home</a></li>
                             <li><a href="#services">Services</a></li>
                             <li><a href="#about_us">About Us</a></li>
-                            <li><a href="#blog">Blog</a></li>
-                            <li><a href="#gallery">Gallery</a></li>
                             <li><a href="#contact_us">Contact Us</a></li>
                         </ul>
                     </div>
@@ -177,47 +177,7 @@
         </div>
         </div>
     </section>
-    <style>
-        /* Custom styling for the FAQ section */
-        .faq-header {
-            background-color: #007bff;
-            color: #ffffff;
-            font-weight: bold;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .faq-question {
-            font-size: 18px;
-            color: #007bff;
-        }
-
-        .faq-answer {
-            font-size: 16px;
-        }
-
-        .faq-icon-blue {
-            color: #007bff;
-        }
-
-        .faq-icon-orange {
-            color: #ff9800;
-        }
-
-        .faq-illustration {
-            background-color: #f8f9fa;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .illu {
-            height: 300px;
-        }
-
-        .what {
-            height: 300px;
-        }
-    </style>
+    
     <!--  ************************* Faq section ************************** -->
     <div class="container mt-5">
         <div class="row">
