--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Speech Care</title>
-
+    <!-- <title>Expert Speech Therapists: Treat Stuttering with Convenient Teletherapy Sessions</title> -->
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
     <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/fontawsom-all.min.css' %}">
@@ -36,6 +36,17 @@
                             <li><a href="#services">Services</a></li>
                             <li><a href="#about_us">About Us</a></li>
                             <li><a href="#contact_us">Contact Us</a></li>
+                            <li>
+                                <a href="https://www.facebook.com/speechcare.in" target="_blank"><i
+                                        class="fab fa-facebook fa-2x" id="icon"></i></a>
+                                <a href="https://www.instagram.com/speechcare.in?igsh=MWtvNGdreTJ4ZWh6Zw=="
+                                    target="_blank"><i class="fab fa-instagram fa-2x ml-2" id="icon"></i></a>
+                                <a href="https://github.com/Mannu258" target="_blank"><i
+                                        class="fab fa-whatsapp fa-2x ml-2" id="icon"></i></a>
+                                <a href="https://github.com/Mannu258" target="_blank"><i
+                                        class="fab fa-youtube fa-2x ml-2" id="icon"></i></a>
+                            </li>
+
                         </ul>
                     </div>
                     <div class="col-sm-2 d-none d-lg-block appoint">
@@ -51,6 +62,10 @@
     <!-- ################# Slider Starts Here#######################--->
 
     <!--***************************** Slider Starts Here *****************************-->
+    <a href="tel:+919311125459" class="fixed-button whatsapp-button">
+        <i class="fab fa-whatsapp fa-2x"></i>
+    </a>
+
     <div class="slider container-fluid">
         <ul id="slider">
             <li data-active="1" data-background="{% static 'assets/images/slider/slider_1.jpg' %}">
@@ -87,7 +102,7 @@
     </div><!--########## Slider Ends Here ##########-->
 
     <!-- ################# Key Features Starts Here#######################--->
-    <section id="about_us" class="with-medical">
+    <section class="with-medical">
         <div class="container">
             <div class="row">
 
@@ -111,7 +126,7 @@
 
     <!-- ################# With Medical Starts Here#######################--->
 
-    <section id="about_us" class="with-medical">
+    <section class="with-medical">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-12">
@@ -140,7 +155,7 @@
     <!-- ################# With Medical Starts Here part 2#######################--->
 
 
-    <section id="about_us" class="with-medical">
+    <section class="with-medical">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6 col-md-12">
@@ -177,7 +192,7 @@
         </div>
         </div>
     </section>
-    
+
     <!--  ************************* Faq section ************************** -->
     <div class="container mt-5">
         <div class="row">
@@ -239,6 +254,88 @@
         </div>
     </div>
 
+    <section id="about_us" class="with-medical">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-6 col-md-12 txtr">
+                    <h4>
+                        <span>About us</span>
+                    </h4>
+                    <p><b>Our Mission</b>:
+                        At Speech Care, our mission is to provide accessible, effective, and compassionate speech
+                        therapy for individuals who stutter. We believe in empowering our clients to achieve their
+                        fullest potential through personalized care and cutting-edge techniques.
+                    </p><br>
+                    <p><b>Our Team</b>:
+                        Our team comprises certified speech-language pathologists with specialized training in
+                        stuttering. Each therapist brings years of experience and a passion for helping individuals
+                        achieve fluency and confidence in their speech.
+                    </p><br>
+                    <p><b>Why Choose Us?</b></p><br>
+                    <ul>
+                        <li><b>Convenience:</b> Online therapy sessions that fit into your schedule and lifestyle.</li>
+                        <br>
+                        <li><b>Expertise:</b> Professional therapists with a focus on stuttering disorders.</li><br>
+                        <li><b>Personalized Care:</b> Tailored therapy plans designed to meet individual needs.</li><br>
+                        <li><b>Community Support:</b> Ongoing support and resources for continuous improvement.</li>
+                    </ul>
+                </div>
+
+                <img class="what" src="{% static 'assets/images/about.png' %}" alt="">
+            </div>
+
+        </div>
+        </div>
+    </section>
+
+
+
+    <section id="services" class="with-medical">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-6 col-md-12 txtr">
+                    <h4>
+                        <span>Services</span>
+                    </h4>
+                    <p><b>Assessment</b>:
+                        Our comprehensive assessment process includes:
+                        Detailed history and evaluation
+
+                        Diagnostic testing to identify the severity and nature of stuttering
+
+                        Personalized feedback and recommendations
+                    </p><br>
+                    <p><b>Progress Monitoring
+                        </b>:
+                    <ol>
+                        <li>Regular progress reviews</li>
+                        <li>Adjustments to therapy plans based on individual progress</li>
+                        <li>Ongoing support and motivation</li>
+                    </ol>
+
+                    </p><br>
+                    <p><b>Therapy Sessions</b></p><br>
+                    <b>We offer one-on-one therapy sessions focusing on:</b>
+                    <ol>
+
+
+                        <li>Speech techniques and strategies to manage stuttering</li>
+
+                        <li>Cognitive-behavioral approaches to reduce anxiety and negative thoughts</li>
+
+                        <li>Regular practice and reinforcement exercises</li>
+                    </ol>
+                </div>
+
+                <img class="what" src="{% static 'assets/images/about.png' %}" alt="">
+            </div>
+
+        </div>
+        </div>
+    </section>
+
 
 
     <!--  ************************* Contact Us Starts Here ************************** -->
@@ -288,35 +385,46 @@
                 <div class="col-md-4 col-sm-12">
                     <h2>About Us</h2>
                     <p>
-                        Smart Eye is a leading provider of information technology, consulting, and business process
-                        services. Our dedicated employees offer strategic insights, technological expertise and industry
-                        experience.
+                        At SpeechCare, we’re passionate about hearing health. Our licensed audiologists blend expertise
+                        with compassion, ensuring personalized care for every patient. Our mission? To improve lives
+                        through better hearing and balance health.
                     </p>
-                    <p>We focus on technologies that promise to reduce costs, streamline processes and speed
-                        time-to-market, Backed by our strong quality processes and rich experience managing global...
+                    <p>Whether you’re seeking diagnostics, rehabilitation,
+                        or preventive services, we’re here for you. Join our community, where diversity, ethical
+                        standards, and patient-centered care intersect. Visit us at (your clinic address) or call (your
+                        phone number) to embark on your hearing health journey together! 🌟12
                     </p>
                 </div>
                 <div class="col-md-4 col-sm-12">
                     <h2>Useful Links</h2>
                     <ul class="list-unstyled link-list">
-                        <li><a ui-sref="about" href="#/about">About us</a><i class="fa fa-angle-right"></i></li>
-                        <li><a ui-sref="portfolio" href="#/portfolio">Portfolio</a><i class="fa fa-angle-right"></i>
-                        </li>
-                        <li><a ui-sref="products" href="#/products">Latest jobs</a><i class="fa fa-angle-right"></i>
-                        </li>
-                        <li><a ui-sref="gallery" href="#/gallery">Gallery</a><i class="fa fa-angle-right"></i></li>
-                        <li><a ui-sref="contact" href="#/contact">Contact us</a><i class="fa fa-angle-right"></i></li>
+                        <li><a ui-sref="about" href="#about_us">About us</a><i class="fa fa-angle-right"></i></li>
+                        <li><a ui-sref="contact" href="#contact_us">Contact us</a><i class="fa fa-angle-right"></i></li>
                     </ul>
                 </div>
                 <div class="col-md-4 col-sm-12 map-img">
                     <h2>Contact Us</h2>
                     <address class="md-margin-bottom-40">
-                        BlueDart <br>
-                        Marthandam (K.K District) <br>
-                        Tamil Nadu, IND <br>
-                        Phone: +91 9159669599 <br>
-                        Email: <a href="mailto:info@anybiz.com" class="">info@bluedart.in</a><br>
-                        Web: <a href="smart-eye.html" class="">www.bluedart.in</a>
+                        Email: <a href="mailto:support@speechcare.in" class="">support@speechcare.in</a><br>
+                        <form method="post">
+                            <input type="email" name="lemail" id="" placeholder="Email"><br>
+                            <button type="submit" class="btn btn-primary m-1">Submit</button>
+
+                        </form>
+
+
+
+                        Web: <a href="speechcare" class="">www.speechcare.in</a><br>
+                        <span>
+                            <a href="https://www.facebook.com/speechcare.in" target="_blank"><i
+                                    class="fab fa-facebook fa-4x ml-1" id="icon"></i></a>
+                            <a href="https://www.instagram.com/speechcare.in?igsh=MWtvNGdreTJ4ZWh6Zw=="
+                                target="_blank"><i class="fab fa-instagram fa-4x ml-3" id="icon"></i></a>
+                            <a href="https://github.com/Mannu258" target="_blank"><i class="fab fa-whatsapp fa-4x ml-3"
+                                    id="icon"></i></a>
+                            <a href="https://github.com/Mannu258" target="_blank"><i class="fab fa-youtube fa-4x ml-3"
+                                    id="icon"></i></a>
+                        </span>
                     </address>
 
                 </div>
@@ -327,15 +435,14 @@
     </footer>
     <div class="copy">
         <div class="container">
-            <a href="https://www.smarteyeapps.com/">2015 &copy; All Rights Reserved | Designed and Developed by
-                Smarteyeapps</a>
+            <a href="https://www.mandeep-developer.site/">2024 &copy; All Rights Reserved | Designed and Developed by
+                Developer</a>
 
             <span>
-                <a><i class="fab fa-github"></i></a>
-                <a><i class="fab fa-google-plus-g"></i></a>
-                <a><i class="fab fa-pinterest-p"></i></a>
-                <a><i class="fab fa-twitter"></i></a>
-                <a><i class="fab fa-facebook-f"></i></a>
+                <a href="https://github.com/Mannu258" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://twitter.com/Mannu_258" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/mandeep-mishra-843378223/" target="_blank"><i
+                        class="fab fa-linkedin"></i></a>
             </span>
         </div>
 
