--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,9 +41,9 @@
                                         class="fab fa-facebook fa-2x" id="icon"></i></a>
                                 <a href="https://www.instagram.com/speechcare.in?igsh=MWtvNGdreTJ4ZWh6Zw=="
                                     target="_blank"><i class="fab fa-instagram fa-2x ml-2" id="icon"></i></a>
-                                <a href="https://github.com/Mannu258" target="_blank"><i
+                                <a href="tel:+919311125459" target="_blank"><i
                                         class="fab fa-whatsapp fa-2x ml-2" id="icon"></i></a>
-                                <a href="https://github.com/Mannu258" target="_blank"><i
+                                <a href="https://www.youtube.com/@speechcare." target="_blank"><i
                                         class="fab fa-youtube fa-2x ml-2" id="icon"></i></a>
                             </li>
 
@@ -420,9 +420,9 @@
                                     class="fab fa-facebook fa-4x ml-1" id="icon"></i></a>
                             <a href="https://www.instagram.com/speechcare.in?igsh=MWtvNGdreTJ4ZWh6Zw=="
                                 target="_blank"><i class="fab fa-instagram fa-4x ml-3" id="icon"></i></a>
-                            <a href="https://github.com/Mannu258" target="_blank"><i class="fab fa-whatsapp fa-4x ml-3"
+                            <a href="tel:+919311125459" target="_blank"><i class="fab fa-whatsapp fa-4x ml-3"
                                     id="icon"></i></a>
-                            <a href="https://github.com/Mannu258" target="_blank"><i class="fab fa-youtube fa-4x ml-3"
+                            <a href="https://www.youtube.com/@speechcare." target="_blank"><i class="fab fa-youtube fa-4x ml-3"
                                     id="icon"></i></a>
                         </span>
                     </address>
