--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -41,8 +41,8 @@
                                         class="fab fa-facebook fa-2x" id="icon"></i></a>
                                 <a href="https://www.instagram.com/speechcare.in?igsh=MWtvNGdreTJ4ZWh6Zw=="
                                     target="_blank"><i class="fab fa-instagram fa-2x ml-2" id="icon"></i></a>
-                                <a href="tel:+919311125459" target="_blank"><i
-                                        class="fab fa-whatsapp fa-2x ml-2" id="icon"></i></a>
+                                <a href="tel:+919311125459" target="_blank"><i class="fab fa-whatsapp fa-2x ml-2"
+                                        id="icon"></i></a>
                                 <a href="https://www.youtube.com/@speechcare." target="_blank"><i
                                         class="fab fa-youtube fa-2x ml-2" id="icon"></i></a>
                             </li>
@@ -62,7 +62,9 @@
     <!-- ################# Slider Starts Here#######################--->
 
     <!--***************************** Slider Starts Here *****************************-->
-    <a href="tel:+919311125459" class="fixed-button whatsapp-button">
+    <a href="https://api.whatsapp.com/send?phone=+919311135459&text=Hello%2C%20I%27m%20interested%20in%20your%20therapy."
+        class="fixed-button whatsapp-button">
+
         <i class="fab fa-whatsapp fa-2x"></i>
     </a>
 
@@ -422,8 +424,8 @@
                                 target="_blank"><i class="fab fa-instagram fa-4x ml-3" id="icon"></i></a>
                             <a href="tel:+919311125459" target="_blank"><i class="fab fa-whatsapp fa-4x ml-3"
                                     id="icon"></i></a>
-                            <a href="https://www.youtube.com/@speechcare." target="_blank"><i class="fab fa-youtube fa-4x ml-3"
-                                    id="icon"></i></a>
+                            <a href="https://www.youtube.com/@speechcare." target="_blank"><i
+                                    class="fab fa-youtube fa-4x ml-3" id="icon"></i></a>
                         </span>
                     </address>
 
