--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,26 +36,35 @@
                             <li><a href="#services">Services</a></li>
                             <li><a href="#about_us">About Us</a></li>
                             <li><a href="#contact_us">Contact Us</a></li>
-                            <li>
-                                <a href="https://www.facebook.com/speechcare.in" target="_blank"><i
-                                        class="fab fa-facebook fa-2x" id="icon"></i></a>
-                                <a href="https://www.instagram.com/speechcare.in?igsh=MWtvNGdreTJ4ZWh6Zw=="
-                                    target="_blank"><i class="fab fa-instagram fa-2x ml-2" id="icon"></i></a>
-                                <a href="tel:+919311125459" target="_blank"><i class="fab fa-whatsapp fa-2x ml-2"
-                                        id="icon"></i></a>
-                                <a href="https://www.youtube.com/@speechcare." target="_blank"><i
-                                        class="fab fa-youtube fa-2x ml-2" id="icon"></i></a>
-                            </li>
+                            <li><a href="#Social">Social</a></li>
+                            <li><a href="#Blog">Blog</a></li>
+                            <li><a href="#video">Video</a></li>
 
+
+                            <!-- {% if not request.user.is_authenticated %}
+                            <li><a class="rounded-circle text-success" href="/">Log in/Register</a></li>
+                            {%else%}
+                            <li>
+                                <a class="text-success" href="">{{request.user.username}}&nbsp;&nbsp;&nbsp;&nbsp;</a>
+                                <a class="rounded-circle text-danger" href="">Logout</a>
+                            </li>
+                            {%endif%} -->
                         </ul>
                     </div>
                     <div class="col-sm-2 d-none d-lg-block appoint">
-                        <button class="btn btn-success">Book an Appointment</button>
-                    </div>
-                </div>
+                        <a href="https://www.facebook.com/speechcare.in" target="_blank"><i
+                                class="fab fa-facebook fa-2x" id="icon"></i></a>
+                        <a href="https://www.instagram.com/speechcare.in?igsh=MWtvNGdreTJ4ZWh6Zw==" target="_blank"><i
+                                class="fab fa-instagram fa-2x ml-2" id="icon"></i></a>
+                        <a href="tel:+919311125459" target="_blank"><i class="fab fa-whatsapp fa-2x ml-2"
+                                id="icon"></i></a>
+                        <a href="https://www.youtube.com/@speechcare." target="_blank"><i
+                                class="fab fa-youtube fa-2x ml-2" id="icon"></i></a>
 
+                    </div>
+
+                </div>
             </div>
-        </div>
     </header>
 
 
@@ -77,7 +86,7 @@
                         <p class="animated  fadeInLeftBig">Revolutionizing stuttering disorder treatment with
                             personalized online therapy plans for quick results.<br> Sufficient for the day is its own
                             trouble.</p>
-                        <span class="animated  fadeInLeftBig ">Dr Kumar Jyotish</span>
+
                         <div class="animated fadeInUpBig buttn-row">
                             <div class="btn">Book an Appointment</div>
 
@@ -92,7 +101,7 @@
                         <h1 class="animated  slideInDown ">You are in the Right Place <br> at the Right Time</h1>
                         <p class="animated  zoomInLeft ">Revolutionizing stuttering disorder treatment with personalized
                             online therapy plans for quick results.<br> Sufficient for the day is its own trouble.</p>
-                        <span class="animated  slideInUp ">Dr Kumar Jyotish</span>
+
                         <div class="buttn-row animated  zoomInLeft">
                             <div class="btn">Book an Appointment</div>
                         </div>
@@ -101,7 +110,8 @@
             </li>
 
         </ul>
-    </div><!--########## Slider Ends Here ##########-->
+    </div>
+    <!--########## Slider Ends Here ##########-->
 
     <!-- ################# Key Features Starts Here#######################--->
     <section class="with-medical">
@@ -341,43 +351,48 @@
 
 
     <!--  ************************* Contact Us Starts Here ************************** -->
-<form action="" method="post">
-    {% csrf_token %}
-    <section id="contact_us" class="contact-us-single container-fluid">
-        <div class="row no-margin">
-            <div class="col-sm-6 cop-ck">
-                <h2>Contact Form</h2>
-                <div class="row cf-ro">
-                    <div class="col-sm-3"><label>Enter Name :</label></div>
-                    <div class="col-sm-8"><input type="text" placeholder="Enter Name" name="name"
-                            class="form-control input-sm"></div>
-                </div>
-                <div class="row cf-ro">
-                    <div class="col-sm-3"><label>Email Address :</label></div>
-                    <div class="col-sm-8"><input type="text" name="name" placeholder="Enter Email Address"
-                            class="form-control input-sm"></div>
-                </div>
-                <div class="row cf-ro">
-                    <div class="col-sm-3"><label>Mobile Number:</label></div>
-                    <div class="col-sm-8"><input type="text" name="name" placeholder="Enter Mobile Number"
-                            class="form-control input-sm"></div>
-                </div>
-                <div class="row cf-ro">
-                    <div class="col-sm-3"><label>Enter Message:</label></div>
-                    <div class="col-sm-8">
-                        <textarea rows="5" placeholder="Enter Your Message" class="form-control input-sm"></textarea>
+    <form action="" method="post">
+        {% csrf_token %}
+        <section id="contact_us" class="contact-us-single container-fluid">
+            <div class="row no-margin">
+                <div class="col-sm-6 cop-ck">
+                    <h2>Contact Form</h2>
+                    <div class="row cf-ro">
+                        <div class="col-sm-3"><label>Enter Name :</label></div>
+                        <div class="col-sm-8"><input type="text" placeholder="Enter Name" name="name"
+                                class="form-control input-sm" required></div>
                     </div>
-                </div>
-                <div class="row cf-ro">
-                    <div class="col-sm-3"><label></label></div>
-                    <div class="col-sm-8">
-                        <button class="btn btn-success btn-sm">Send Message</button>
+                    <div class="row cf-ro">
+                        <div class="col-sm-3"><label>Email Address :</label></div>
+                        <div class="col-sm-8"><input type="text" name="email" placeholder="Enter Email Address"
+                                class="form-control input-sm" required></div>
+                    </div>
+                    <div class="row cf-ro">
+                        <div class="col-sm-3"><label>Mobile Number:</label></div>
+                        <div class="col-sm-8">
+                            <input type="number" name="mobile" placeholder="Enter Mobile Number"
+                                class="form-control input-sm"
+                                oninput="javascript: if (this.value.length > 10) this.value = this.value.slice(0, 10);"
+                                required>
+                        </div>
+                    </div>
+                    <div class="row cf-ro">
+                        <div class="col-sm-3"><label>Enter Message:</label></div>
+                        <div class="col-sm-8">
+                            <textarea rows="5" name="msg" placeholder="Enter Your Message" class="form-control input-sm"
+                                required></textarea>
+                        </div>
+                    </div>
+                    <div class="row cf-ro">
+                        <div class="col-sm-3"><label></label></div>
+                        <div class="col-sm-8">
+                            <button class="btn btn-success btn-sm">Send Message</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-</form>
+        </section>
+    </form>
 
     <!-- ################# Footer Starts Here#######################--->
 
@@ -411,30 +426,35 @@
                         Email: <a href="mailto:support@speechcare.in" class="">support@speechcare.in</a><br>
                         <form method="post">
                             {% csrf_token %}
-                            <input type="email" name="lemail" id="" placeholder="Email"><br>
-                            <button type="submit" class="btn btn-primary m-1">Submit</button>
+                            <input type="email" name="email" id="" placeholder="Email"><br>
+                            <button type="submit" onclick="done()" class="btn btn-primary m-1">Submit</button>
+                            <script>
+                                function done() {
+                                    alert("Thank you for sharing your email address!");
+                                }
+                            </script>
 
                         </form>
 
 
-
-                        Web: <a href="speechcare" class="">www.speechcare.in</a><br>
-                        <span>
-                            <a href="https://www.facebook.com/speechcare.in" target="_blank"><i
-                                    class="fab fa-facebook fa-4x ml-1" id="icon"></i></a>
-                            <a href="https://www.instagram.com/speechcare.in?igsh=MWtvNGdreTJ4ZWh6Zw=="
-                                target="_blank"><i class="fab fa-instagram fa-4x ml-3" id="icon"></i></a>
-                            <a href="tel:+919311125459" target="_blank"><i class="fab fa-whatsapp fa-4x ml-3"
-                                    id="icon"></i></a>
-                            <a href="https://www.youtube.com/@speechcare." target="_blank"><i
-                                    class="fab fa-youtube fa-4x ml-3" id="icon"></i></a>
-                        </span>
+                        <section id="Social">
+                            Web: <a href="speechcare" class="">www.speechcare.in</a><br>
+                            <span>
+                                <a href="https://www.facebook.com/speechcare.in" target="_blank"><i
+                                        class="fab fa-facebook fa-4x ml-1" id="icon"></i></a>
+                                <a href="https://www.instagram.com/speechcare.in?igsh=MWtvNGdreTJ4ZWh6Zw=="
+                                    target="_blank"><i class="fab fa-instagram fa-4x ml-3" id="icon"></i></a>
+                                <a href="tel:+919311125459" target="_blank"><i class="fab fa-whatsapp fa-4x ml-3"
+                                        id="icon"></i></a>
+                                <a href="https://www.youtube.com/@speechcare." target="_blank"><i
+                                        class="fab fa-youtube fa-4x ml-3" id="icon"></i></a>
+                            </span>
                     </address>
 
                 </div>
             </div>
         </div>
-
+        </section>
 
     </footer>
     <div class="copy">
