added personl website

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -463,6 +463,7 @@
                 Developer</a>
 
             <span>
+                <a href="https://www.mandeep-developer.site/" target="_blank"><i class="far fa-user-circle"></i></a>
                 <a href="https://github.com/Mannu258" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="https://twitter.com/Mannu_258" target="_blank"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/mandeep-mishra-843378223/" target="_blank"><i
