add admin section

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -88,7 +88,7 @@
                             trouble.</p>
 
                         <div class="animated fadeInUpBig buttn-row">
-                            <div class="btn">Book an Appointment</div>
+                            <a href="https://calendar.app.google/bpnjuDo43VL95atC9" class="btn">Book an Appointment</a>
 
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                             online therapy plans for quick results.<br> Sufficient for the day is its own trouble.</p>
 
                         <div class="buttn-row animated  zoomInLeft">
-                            <div class="btn">Book an Appointment</div>
+                            <a href="https://calendar.app.google/bpnjuDo43VL95atC9" class="btn">Book an Appointment</a>
                         </div>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                         <strong>Contact us today to schedule your free initial consultation.</strong>
                     </p>
                     <div class="animated fadeInUpBig buttn-row">
-                        <div class="btn btn-primary mt-4">Book an Appointment</div>
+                        <a href="https://calendar.app.google/bpnjuDo43VL95atC9" class="btn btn-primary mt-4">Book an Appointment</a>
 
                     </div>
                 </div>
